mobile responsiveness fix

--- a/index-1.html
+++ b/index-1.html
@@ -16,8 +16,12 @@
   <body>
     <header>
       <nav>
-        <img src="assets/logo-dark.svg" alt="" />
-        <button>Get Started</button>
+        <div class="logo">
+          <img src="assets/logo-dark.svg" alt="" />
+        </div>
+        <div>
+          <button>Get Started</button>
+        </div>
       </nav>
     </header>
     <main>
@@ -33,7 +37,21 @@
           </div>
         </div>
         <div class="image-container">
-          <img src="assets/image-hero-desktop@2x.webp" alt="" />
+          <img
+            class="desktop-image"
+            src="assets/image-hero-desktop@2x.webp"
+            alt=""
+          />
+          <img
+            class="mobile-image"
+            src="assets/image-hero-mobile@2x.webp"
+            alt=""
+          />
+          <img
+            class="tablet-image"
+            src="assets/image-hero-tablet@2x.webp"
+            alt=""
+          />
         </div>
       </section>
 
